--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ main {
   border-radius: 5px;
   box-shadow: 5px 5px 5px #888888;
 }
-#viewer {
+#display {
   width: 85%;
   height: 65px;
   margin-left: auto;
